--- a/public/css/jQuizler.css
+++ b/public/css/jQuizler.css
@@ -26,6 +26,7 @@
         /*position: relative;
         background: #FCFCFC;*/
         border: 1px solid #dedede;
+        min-height: 500px;
         /*box-shadow: 0 1px 5px #D9D9D9,inset 0 10px 20px #F1F1F1;
         border-radius: 10px 10px 10px 10px;*/
     }
